--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=chat-pro
+server.port=8081
+
+spring.jwt.adminSecretKey=test
+spring.jwt.adminTtl=7200000000
+spring.jwt.adminTokenName=token
+
+spring.jwt.userSecretKey=test
+spring.jwt.userTtl=7200000000
+spring.jwt.userTokenName=authentication
+
+spring.threadpool.getMsgPoolcorePoolSize=1
+spring.threadpool.getMsgPoolmaxPoolSize=1
+spring.threadpool.getMsgPoolqueueCapacity=1
+
+spring.threadpool.sndMsgPoolcorePoolSize=4
+spring.threadpool.sndMsgPoolmaxPoolSize=4
+spring.threadpool.sndMsgPoolqueueCapacity=20
+
+logging.level.com.chat.chatpro=info
